-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15, 17
-
Component/s: hotspot
-
b21
-
x86
-
linux
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (zNUMA_linux.cpp:64), pid=2321, tid=2322
# fatal error: Failed to get NUMA id for memory at 0x0000100000600000 (Operation not permitted)
#
# JRE version: OpenJDK Runtime Environment (15.0) (build 15-internal+0-adhoc..jdk)
# Java VM: OpenJDK 64-Bit Server VM (15-internal+0-adhoc..jdk, mixed mode, tiered, z gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xeddf69] ZNUMA::memory_id(unsigned long)+0x69
#
# Internal Error (zNUMA_linux.cpp:64), pid=2321, tid=2322
# fatal error: Failed to get NUMA id for memory at 0x0000100000600000 (Operation not permitted)
#
# JRE version: OpenJDK Runtime Environment (15.0) (build 15-internal+0-adhoc..jdk)
# Java VM: OpenJDK 64-Bit Server VM (15-internal+0-adhoc..jdk, mixed mode, tiered, z gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xeddf69] ZNUMA::memory_id(unsigned long)+0x69
- relates to
-
JDK-8241423 NUMA APIs fail to work in dockers due to dependent syscalls are disabled by default
-
- Resolved
-
-
JDK-8266217 ZGC: Improve the -Xlog:gc+init output for NUMA
-
- Resolved
-