8241354: ZGC still crashes in containers with NUMA due to get_mempolicy is disabled by default